# anonymize

./: .gitignore  LICENSE  README.md  anonymize.py  anonymize_django_shell_snippets.md  pyproject.toml
tests/: test_maskers.py  test_pipeline.py
validation/: dummy.md  dummy_anonymized.md
